parser/tests/cases/snapshots/cases__errors__contract_empty_body.snap
---
source: parser/tests/cases/errors.rs
expression: err

---
error: failed to parse contract definition body
  ┌─ contract_empty_body:1:1
  │
1 │ contract X:
  │ ^^^^^^^^^^^ the body of this contract definition must be indented and non-empty


